<resources>
  <string name="app_name">Assignment4</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="assignment_2">Assignment 2</string>
  <string name="expire_date">Expire Date</string>
  <string name="product_name">Product Name</string>
  <string name="price">Price</string>
  <string name="picture">Picture</string>
    <string name="no_products_available">No products available</string>
</resources>