<!-- item_product.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/itemLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/itemImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="49dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemPriceTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.461"
        android:contentDescription="@string/picture" />

    <TextView
        android:id="@+id/itemNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:drawablePadding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/itemExpiryTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/itemExpiryTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemExpiryTextView"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/expire_date"
        app:layout_constraintEnd_toEndOf="@+id/itemPriceTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/itemPriceTextView"
        app:layout_constraintTop_toBottomOf="@+id/itemNameTextView" />

    <TextView
        android:id="@+id/itemPriceTextView"
        android:layout_width="40dp"
        android:layout_height="21dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="220dp"
        android:text="@string/price"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemExpiryTextView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
